--- a/src/QuickApp/ClientApp/package.json
+++ b/src/QuickApp/ClientApp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quickapp",
-  "version": "2.5.3",
+  "version": "1.1.0",
   "description": "Angular5 (with ASP.NET Core) project template with complete login, user and role management. Plus other useful services for quick development",
   "author": {
     "name": "Vladyslav Hrehul",
@@ -9,7 +9,7 @@
   },
   "license": "MIT",
   "homepage": "http://www.futuresoftware.org/",
-  "repository": "https://github.com/Mynken/CarWash-Core2-Angular5",
+  "repository": "https://github.com/Mynken/FSW_TFS",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --extract-css",
@@ -70,23 +70,5 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
-  },
-  "keywords": [
-    "ng",
-    "angular",
-    "angular2",
-    "angular5",
-    "angularX",
-    "aspnetcore",
-    "aspnet-core",
-    "startup",
-    "template",
-    "carwash-app",
-    "carwashapp",
-    "carwashapplication",
-    "rad",
-    "ng2",
-    "ng5",
-    "ngX"
-  ]
+  }
 }
