--- a/src/QuickApp/appsettings.Development.json
+++ b/src/QuickApp/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AppTittle;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=FSW_TFS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
 
